@@ -50,7 +50,7 @@ stylesheets, or scripting.</B>
 <TR><TD>BLOCKQUOTE</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>&nbsp;</TD></TR>
 <TR><TD>BODY</TD><TD ALIGN="CENTER">1.0</TD><TD ALIGN="CENTER">Yes</TD><TD>&nbsp;</TD></TR>
 <TR><TD>BR</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>&nbsp;</TD></TR>
-<TR><TD>CAPTION</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD><A HREF="#TABLE">See Below</A></TD></TR>
+<TR><TD>CAPTION</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>&nbsp;</TD></TR>
 <TR><TD>CENTER</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>&nbsp;</TD></TR>
 <TR><TD>CITE</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>Italic/Oblique</TD></TR>
 <TR><TD>CODE</TD><TD ALIGN="CENTER">2.0</TD><TD ALIGN="CENTER">Yes</TD><TD>Courier</TD></TR>
@@ -535,15 +535,6 @@ Currently <I>HTMLDOC</I> supports a maximum of 200 columns within a
 single table.  This limit can be increased by changing the
 <CODE>MAX_COLUMNS</CODE> constant in the <VAR>config.h</VAR> file
 included with the source code.
-
-<I>HTMLDOC</I> supports HTML 3.0 tables with the following exceptions:
-
-<UL>
-
-	<LI>The <CODE>CAPTION</CODE> element is always shown at the top
-	of the table.
-
-</UL>
 
 <P><B><I>HTMLDOC</I> does not support HTML 4.0 table elements or
 attributes, such as <CODE>TBODY</CODE>, <CODE>THEAD</CODE>,
